fix url to demo site
the name of the created file is viewer.html

--- a/web/index.html.template
+++ b/web/index.html.template
@@ -50,7 +50,7 @@
     </div>
 
     <h2>Try it out!</h2>
-    <p>Live <a href="web/multi_page_viewer.html">demo</a> lives here.</p>
+    <p>Live <a href="web/viewer.html">demo</a> lives here.</p>
 
     <h2>Authors</h2>
 <p>Vivien Nicolas (21@vingtetun.org)
