New README, .gitignores; Makefile
Makefile: commented out unnecessary closure download and shell testing (at least until someone decides to work on this).

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -1,3 +1,13 @@
-pdf.pdf
+DiwanProfile.pdf
+artofwar.pdf
+cable.pdf
+ecma262.pdf
+hmm.pdf
+i9.pdf
 intelisa.pdf
 openweb_tm-PRINT.pdf
+pdf.pdf
+pdkids.pdf
+shavian.pdf
+jai.pdf
+
