Move the 'web/viewer.html' path inside chrome.extensions.getURL

--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -5,7 +5,7 @@
   "permissions": [
     "experimental",
     "http://*/*.pdf",
-    "file:///*/*.pdf"
+    "file://*/*.pdf"
   ],
   "background_page": "pdfHandler.html"
 }
