Adding all the pdf's to the repo.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -14,4 +14,29 @@
 !sizes.pdf
 !close-path-bug.pdf
 !alphatrans.pdf
+!DiwanProfile.pdf
+!artofwar.pdf
+!cable.pdf
+!ecma262.pdf
+!f1040.pdf
+!fips197.pdf
+!fit11-talk.pdf
+!hmm.pdf
+!hudsonsurvey.pdf
+!i9.pdf
+!ibwa-bad.pdf
+!intelisa.pdf
+!jai.pdf
+!openweb_tm-PRINT.pdf
+!pal-o47.pdf
+!pdf.pdf
+!pdkids.pdf
+!shavian.pdf
+!tcpdf_033.pdf
+!txt2pdf.pdf
+!unix01.pdf
+!usmanm-bad.pdf
+!vesta.pdf
+!wdsg_fitc.pdf
+!wnv_chinese.pdf
 
