--- a/test/unit/Makefile
+++ b/test/unit/Makefile
@@ -1,7 +1,20 @@
-PROG=java -Xms512m -Xmx1024m -jar ../../external/jsTestDriver/JsTestDriver-1.3.3d.jar --reset --port 4224 --browser firefox --tests all --testOutput ./test_reports/
+# Fetch the paths to browsers that are going to be used in testing.
+MANIFEST=../resources/browser_manifests/browser_manifest.json
+BROWSERS=$(shell echo `sed -n 's/.*"path":\(.*\)/\1,/p' $(MANIFEST) | tr -d '\n'`)
+
+# Command to invoke the unit test.
+PROG=java \
+-Xms512m \
+-Xmx1024m \
+-jar ../../external/jsTestDriver/JsTestDriver-1.3.3d.jar \
+--reset \
+--port 4224 \
+--browser $(BROWSERS) \
+--tests all \
+--testOutput ./test_reports/
 
 test:
-	$(PROG) ; \
+	$(PROG)
 
 .phony:: test
 
