Use paths to binaries for Mac in unit test makefile.

--- a/test/unit/Makefile
+++ b/test/unit/Makefile
@@ -1,6 +1,9 @@
 # Fetch the paths to browsers that are going to be used in testing.
 MANIFEST=../resources/browser_manifests/browser_manifest.json
-BROWSERS=$(shell echo `sed -n 's/.*"path":\(.*\)/\1,/p' $(MANIFEST) | tr -d '\n'`)
+BROWSERS=$(shell echo `sed -n 's/.*"path":\(.*\)/\1,/p' $(MANIFEST) | tr -d '\n' | \
+  sed 's/\(Google Chrome\.app\)/\1\/Contents\/MacOS\/Google Chrome/' | \
+  sed 's/\(Firefox[ Beta]*\.app\)/\1\/Contents\/MacOS\/firefox-bin/' \
+`)
 
 # Command to invoke the unit test.
 PROG=java \
