Remove unit-test from 'make test' and add Aurora to the paths on mac.

--- a/test/unit/Makefile
+++ b/test/unit/Makefile
@@ -2,6 +2,7 @@
 MANIFEST=../resources/browser_manifests/browser_manifest.json
 BROWSERS=$(shell echo `sed -n 's/.*"path":\(.*\)/\1,/p' $(MANIFEST) | tr -d '\n' | \
   sed 's/\(Google Chrome\.app\)/\1\/Contents\/MacOS\/Google Chrome/' | \
+  sed 's/\(Aurora\.app\)/\1\/Contents\/MacOS\/firefox-bin/' | \
   sed 's/\(Firefox[ Beta]*\.app\)/\1\/Contents\/MacOS\/firefox-bin/' \
 `)
 
