--- a/test/unit/jsTestDriver.conf
+++ b/test/unit/jsTestDriver.conf
@@ -4,5 +4,25 @@ load:
   - ../../external/jasmine/jasmine.js
   - ../../external/jasmineAdapter/JasmineAdapter.js
   - ../../src/obj.js
+  - ../../src/core.js
+  - ../../src/util.js
+  - ../../src/canvas.js
+  - ../../src/obj.js
+  - ../../src/function.js
+  - ../../src/charsets.js
+  - ../../src/cidmaps.js
+  - ../../src/colorspace.js
+  - ../../src/crypto.js
+  - ../../src/evaluator.js
+  - ../../src/fonts.js
+  - ../../src/glyphlist.js
+  - ../../src/image.js
+  - ../../src/metrics.js
+  - ../../src/parser.js
+  - ../../src/pattern.js
+  - ../../src/stream.js
+  - ../../src/worker.js
+  - ../../external/jpgjs/jpg.js
   - ../unit/obj_spec.js
+  - ../unit/function_spec.js
 
