Add crypto and stream specs to test runner configuration.

--- a/test/unit/jsTestDriver.conf
+++ b/test/unit/jsTestDriver.conf
@@ -25,4 +25,6 @@ load:
   - ../../external/jpgjs/jpg.js
   - ../unit/obj_spec.js
   - ../unit/function_spec.js
+  - ../unit/crypto_spec.js
+  - ../unit/stream_spec.js
 
