allow testing of text/highlight/underline annotation extraction

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -22,3 +22,9 @@
 !issue918.pdf
 !smaskdim.pdf
 !type4psfunc.pdf
+!annot-canvas.pdf
+!annot-freeculture.pdf
+!annot-genderdifferences.pdf
+!annot-issue918.pdf
+!annot-rotation.pdf
+!annot-tracemonkey.pdf
