extract annotations by transforming rendered characters and annotations into device space to perform hit-testing

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -24,3 +24,10 @@
 !type4psfunc.pdf
 !S2.pdf
 !zerowidthline.pdf
+!annot-canvas.pdf
+!annot-freeculture.pdf
+!annot-genderdifferences.pdf
+!annot-issue918.pdf
+!annot-rotation.pdf
+!annot-tracemonkey.pdf
+!annot-chart.pdf
