Properly integrate new file bidi.js

--- a/test/unit/jsTestDriver.conf
+++ b/test/unit/jsTestDriver.conf
@@ -22,6 +22,7 @@ load:
   - ../../src/pattern.js
   - ../../src/stream.js
   - ../../src/worker.js
+  - ../../src/bidi.js
   - ../../external/jpgjs/jpg.js
   - ../unit/obj_spec.js
   - ../unit/function_spec.js
