Add font spec to the unit test list.

--- a/test/unit/jsTestDriver.conf
+++ b/test/unit/jsTestDriver.conf
@@ -25,6 +25,7 @@ load:
   - ../../src/bidi.js
   - ../../external/jpgjs/jpg.js
   - ../unit/obj_spec.js
+  - ../unit/font_spec.js
   - ../unit/function_spec.js
   - ../unit/crypto_spec.js
   - ../unit/stream_spec.js
