--- a/extensions/firefox/install.rdf.in
+++ b/extensions/firefox/install.rdf.in
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
 
+#filter substitution
+
 <RDF xmlns="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
      xmlns:em="http://www.mozilla.org/2004/em-rdf#">
 
