Add back other unit tests. Disable worker.

--- a/test/unit/jsTestDriver.conf
+++ b/test/unit/jsTestDriver.conf
@@ -28,6 +28,11 @@ load:
   - ../src/bidi.js
   - ../src/metadata.js
   - ../external/jpgjs/jpg.js
+  - unit/obj_spec.js
+  - unit/font_spec.js
+  - unit/function_spec.js
+  - unit/crypto_spec.js
+  - unit/stream_spec.js
   - unit/api_spec.js
 
 gateway:
