Fix ru language

--- a/web/locale.properties
+++ b/web/locale.properties
@@ -46,8 +46,9 @@ error_file=Файл: {{file}}
 error_line=Строка: {{line}}
 page_scale_width=Ширина страницы
 page_scale_fit=Вся страница
-page_scale_auto=Автоматически
+page_scale_auto=Автоматический
 page_scale_actual=Настоящий размер
+toggle_slider.title=Открыть/закрыть вспомогательную панель
 thumbs.title=Показать уменьшенные изображения
 outline.title=Показать содержание документа
 loading=Загрузка... {{percent}}%
