Fixes rtl languages

--- a/web/locale.properties
+++ b/web/locale.properties
@@ -3,7 +3,7 @@ bookmark.title=Current view (copy or open in new window)
 previous.title=Previous
 next.title=Next
 print.title=Print
-download_label.title=Download
+download.title=Download
 zoom_out.title=Zoom Out
 zoom_in.title=Zoom In
 error_more_info=More Information
@@ -30,35 +30,35 @@ page_of=of {{pageCount}}
 no_outline=No Outline Available
 
 [ar]
-‏‫bookmark.title=الحالية عرض (نسخة أو في فتح نافذة جديدة)‬
-‏‫previous.title=سابق‬
-‏‫next.title=التالي‬
-‏‫print.title=طباعة‬
-‏‫download_label.title=تحميل‬
-‏‫zoom_out.title=التصغير‬
-‏‫zoom_in.title=تكبير‬
-‏‫error_more_info=مزيد من المعلومات‬
-‏‫error_less_info=أقل المعلومات‬
-‏‫error_close=أغلق‬
-‏‫error_build=PDF.JS البناء: ‬{{build}}
-‏‫error_message=الرسالة: ‬{{message}}
-‏‫error_stack=المكدس: ‬{{stack}}
-‏‫error_file=ملف:‬ {{file}}
-‏‫error_line=خط: ‬{{line}}
-‏‫page_scale_width=صفحة العرض‬
-‏‫page_scale_fit=صفحة صالح‬
-‏‫page_scale_auto=التلقائي تكبير‬
-‏‫page_scale_actual=الحجم الفعلي‬
-‏‫toggle_slider.title=تبديل المتزلج‬
-‏‫thumbs.title=وتظهر الصور المصغرة‬
-‏‫outline.title=عرض المخطط التفصيلي وثيقة‬
-‏‫loading=تحميل ... {{percent}}٪ في المئة‬
-‏‫loading_error_indicator=خطأ‬
-‏‫loading_error=حدث خطأ أثناء تحميل قوات الدفاع الشعبي.‬
-‏‫rendering_error=حدث خطأ في حين جعل صفحة.‬
-‏‫page_label=الصفحة:‬
-‏‫page_of=من {{pageCount}}‬
-‏‫no_outline=لا مخطط متاح‬
+bookmark.title=الحالية عرض (نسخة أو في فتح نافذة جديدة)‬
+previous.title=سابق‬
+next.title=التالي‬
+print.title=طباعة‬
+download.title=تحميل‬
+zoom_out.title=التصغير‬
+zoom_in.title=تكبير‬
+error_more_info=مزيد من المعلومات‬
+error_less_info=أقل المعلومات‬
+error_close=أغلق‬
+error_build=PDF.JS البناء: ‬{{build}}
+error_message=الرسالة: ‬{{message}}
+error_stack=المكدس: ‬{{stack}}
+error_file=ملف:‬ {{file}}
+error_line=خط: ‬{{line}}
+page_scale_width=صفحة العرض‬
+page_scale_fit=صفحة صالح‬
+page_scale_auto=التلقائي تكبير‬
+page_scale_actual=الحجم الفعلي‬
+toggle_slider.title=تبديل المتزلج‬
+thumbs.title=وتظهر الصور المصغرة‬
+outline.title=عرض المخطط التفصيلي وثيقة‬
+loading=تحميل ... {{percent}}٪ في المئة‬
+loading_error_indicator=خطأ‬
+loading_error=حدث خطأ أثناء تحميل قوات الدفاع الشعبي.‬
+rendering_error=حدث خطأ في حين جعل صفحة.‬
+page_label=الصفحة:‬
+page_of=من {{pageCount}}‬
+no_outline=لا مخطط متاح‬
 
 [ru]
 bookmark.title=Ссылка на текущий вид (скопировать или открыть в новом окне) 
@@ -96,7 +96,7 @@ bookmark.title=<<<_¢ȗггεпţ ṿiεẂ (¢OÞӳ Oг OÞεп iп пεẂ Ẃ
 previous.title=<<<_ÞгεṿiOȗ§_>>>
 next.title=<<<_пεӾţ_>>>
 print.title=<<<_Þгiпţ_>>>
-download_label.title=<<<_ÐOẂпḻOãÐ_>>>
+download.title=<<<_ÐOẂпḻOãÐ_>>>
 zoom_out.title=<<<_ƩOOм Oȗţ_>>>
 zoom_in.title=<<<_ƩOOм iп_>>>
 error_more_info=<<<_мOгε iп£OгмãţiOп_>>>
