--- a/test/mozcentral/Makefile.in
+++ b/test/mozcentral/Makefile.in
@@ -14,6 +14,7 @@ include $(topsrcdir)/config/rules.mk
 _BROWSER_TEST_FILES = \
   head.js \
   browser_pdfjs_main.js \
+  browser_pdfjs_zoom.js \
   file_pdfjs_test.pdf \
   $(NULL)
 
