Update dependencies to the most recent versions
Note that we must include `eslint-config-prettier` explicitly because
it's now a required dependency and without it linting fails; please see
https://github.com/prettier/eslint-plugin-prettier?tab=readme-ov-file#installation.

--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
-    "@babel/runtime": "^7.27.6",
+    "@babel/runtime": "^7.28.2",
     "@csstools/postcss-light-dark-function": "^2.0.9",
     "@fluent/bundle": "^0.19.1",
     "@fluent/dom": "^0.10.2",
     "@metalsmith/layouts": "^3.0.0",
     "@metalsmith/markdown": "^1.10.0",
     "@napi-rs/canvas": "^0.1.74",
-    "@types/node": "^24.0.15",
+    "@types/node": "^24.1.0",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "caniuse-lite": "^1.0.30001727",
     "core-js": "^3.44.0",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jasmine": "^4.2.2",
     "eslint-plugin-json": "^4.0.1",
@@ -32,7 +33,7 @@
     "gulp-replace": "^1.1.4",
     "gulp-zip": "^6.1.0",
     "highlight.js": "^11.11.1",
-    "jasmine": "^5.8.0",
+    "jasmine": "^5.9.0",
     "jsdoc": "^4.0.4",
     "jstransformer-nunjucks": "^1.2.0",
     "metalsmith": "^2.6.3",
@@ -44,7 +45,7 @@
     "postcss-discard-comments": "^7.0.4",
     "postcss-nesting": "^13.0.2",
     "prettier": "^3.6.2",
-    "puppeteer": "^24.14.0",
+    "puppeteer": "^24.15.0",
     "stylelint": "^16.22.0",
     "stylelint-prettier": "^5.0.3",
     "svglint": "^4.1.0",
