--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -742,3 +742,4 @@
 !tracemonkey_with_annotations.pdf
 !tracemonkey_with_editable_annotations.pdf
 !bug1980958.pdf
+!tracemonkey_annotation_on_page_8.pdf
