--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -749,3 +749,6 @@
 !issue20319_1.pdf
 !issue20319_2.pdf
 !bug1992868.pdf
+!bug1937438_af_from_latex.pdf
+!bug1937438_from_word.pdf
+!bug1937438_mml_from_latex.pdf
