Add the possibility to create a pdf from different ones (bug 1997379)
For now it's just possible to create a single pdf in selecting some pages in different pdf sources.
The merge is for now pretty basic (it's why it's still a WIP) none of these data are merged for now:
 - the struct trees
 - the page labels
 - the outlines
 - named destinations
For there are 2 new ref tests where some new pdfs are created: one with some extracted pages and an other
one (encrypted) which is just rewritten.
The ref images are generated from the original pdfs in selecting the page we want and the new images are
taken from the generated pdfs.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -754,3 +754,6 @@
 !bug1937438_from_word.pdf
 !bug1937438_mml_from_latex.pdf
 !bug1997343.pdf
+!doc_1_3_pages.pdf
+!doc_2_3_pages.pdf
+!doc_3_3_pages.pdf
