--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -93,6 +93,7 @@
 !issue8372.pdf
 !issue9713.pdf
 !xfa_filled_imm1344e.pdf
+!xfa_bug1716806.pdf
 !issue8424.pdf
 !issue8480.pdf
 !bug1650302_reduced.pdf
