Lint and format the HTML in using Prettier
The linter found some issues in viewer.html with </input> which isn't required
and a missing closing div in test/resources/reftest-analyzer.html.
The HTML can now be nicely formatted. In order to not break the build for
mozilla-central, the preprocessor has been fixed in order to take into account
the white spaces at the beginning of a comment line.
And finally, make .prettierrc (which is supposed to be either json or yaml)
itself lintable.

--- a/.prettierrc
+++ b/.prettierrc
@@ -9,10 +9,17 @@
 
   "overrides": [
     {
-      files: ["tsconfig.json"],
-      options: {
-        parser: "json",
-      },
+      "files": ["tsconfig.json", ".prettierrc"],
+      "options": {
+        "parser": "json"
+      }
     },
+    {
+      "files": ["**/*.html"],
+      "options": {
+        "parser": "html",
+        "printWidth": 160
+      }
+    }
   ]
 }
