Include missing `cached-iterable` dev dependency in `package.json`
This dependency got introduced during the move to Fluent for
localization (bug 1858715), but it wasn't added to `package.json`
at the time. This worked because other dependencies already
installed it, but we shouldn't rely on that, so this commit
explicitly includes it in `package.json` instead.

Fixes 66982a2a.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^24.10.0",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
+    "cached-iterable": "^0.3.0",
     "caniuse-lite": "^1.0.30001754",
     "core-js": "^3.46.0",
     "eslint": "^9.39.1",
