Extend getGlyphMapForStandardFonts with some Russian entries (issue 20453)

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -672,6 +672,7 @@
 !issue17730.pdf
 !bug1883609.pdf
 !issue19550.pdf
+!issue20453.pdf
 !issue17808.pdf
 !issue17871_bottom_right.pdf
 !issue17871_top_right.pdf
