Add a new linting task in order to detect unused/unknown css variables in the Firefox build
The goal is to be able to catch the errors before making a release.
And fix some css issues (especially the missing css code for the newly added menu.css)

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,3 +32,6 @@ jobs:
 
       - name: Run lint-chromium
         run: npx gulp lint-chromium
+
+      - name: Run lint-mozcentral
+        run: npx gulp lint-mozcentral
