--- a/.stylelintrc
+++ b/.stylelintrc
@@ -17,9 +17,9 @@
       "float": ["inline-start", "inline-end"]
     },
     "length-zero-no-unit": [true, {
-      ignore: ["custom-properties"]
+      "ignore": ["custom-properties"]
     }],
     "selector-pseudo-element-colon-notation": "double",
-    "shorthand-property-no-redundant-values": true,
-  },
+    "shorthand-property-no-redundant-values": true
+  }
 }
