Fix OSS-Fuzz build configuration issues
1. Remove --sync flag from all fuzzer compilations
   - All fuzzers use async functions that return Promises
   - Jazzer.js handles async fuzzers correctly without --sync
   - Prevents shallow fuzzing and uncaught promise rejections

2. Update repository URLs to upstream mozilla/pdf.js
   - Dockerfile: Clone from mozilla/pdf.js instead of fork
   - project.yaml: Point homepage and main_repo to upstream

--- a/test/fuzz/ossfuzz/Dockerfile
+++ b/test/fuzz/ossfuzz/Dockerfile
@@ -24,9 +24,7 @@ RUN apt-get update && apt-get install -y \
     libtool
 
 # Clone pdf.js repository
-RUN git clone --depth 1 https://github.com/nicktao1997/pdfjs.git pdf-js
-# After upstream merge, use:
-# RUN git clone --depth 1 https://github.com/nicktao1997/pdfjs.git pdf-js
+RUN git clone --depth 1 https://github.com/mozilla/pdf.js.git pdf-js
 
 WORKDIR pdf-js
 COPY build.sh $SRC/
