--- a/test/fuzz/ossfuzz/project.yaml
+++ b/test/fuzz/ossfuzz/project.yaml
@@ -1,7 +1,7 @@
-homepage: "https://github.com/nicktao1997/pdfjs"
+homepage: "https://github.com/mozilla/pdf.js"
 language: javascript
 primary_contact: "nicktao1997@mozilla.com"
-main_repo: "https://github.com/nicktao1997/pdfjs"
+main_repo: "https://github.com/mozilla/pdf.js"
 vendor_ccs:
   - nicktao.dev@gmail.com
 fuzzing_engines:
