Remove ASan/UBSan sanitizers (not applicable to JavaScript)

--- a/test/fuzz/ossfuzz/project.yaml
+++ b/test/fuzz/ossfuzz/project.yaml
@@ -6,8 +6,5 @@ vendor_ccs:
   - nicktao.dev@gmail.com
 fuzzing_engines:
   - libfuzzer
-  - afl
-  - honggfuzz
 sanitizers:
-  - address
-  - undefined
+  - none
