--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -752,6 +752,7 @@
 !issue20319_1.pdf
 !issue20319_2.pdf
 !issue20439.pdf
+!bitmap-symbol-context-reuse.pdf
 !bug1992868.pdf
 !bug1937438_af_from_latex.pdf
 !bug1937438_from_word.pdf
