Add some tests for the JBIG2 js decoder
It fixes #20529.

The files come from:
https://github.com/SerenityOS/serenity/tree/master/Tests/LibGfx/test-inputs/jbig2/

Thank you to Nico Weber for offering these test files.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -769,3 +769,100 @@
 !issue20516.pdf
 !issue20489.pdf
 !bug2004951.pdf
+!bitmap-composite-and-xnor-halftone.pdf
+!bitmap-composite-and-xnor-refine.pdf
+!bitmap-composite-and-xnor-text.pdf
+!bitmap-composite-and-xnor.pdf
+!bitmap-composite-or-xor-replace-halftone.pdf
+!bitmap-composite-or-xor-replace-refine.pdf
+!bitmap-composite-or-xor-replace-text.pdf
+!bitmap-composite-or-xor-replace.pdf
+!bitmap-customat-tpgdon.pdf
+!bitmap-customat.pdf
+!bitmap-halftone-10bpp-mmr.pdf
+!bitmap-halftone-10bpp.pdf
+!bitmap-halftone-composite.pdf
+!bitmap-halftone-grid.pdf
+!bitmap-halftone-refine.pdf
+!bitmap-halftone-skip-dummy.pdf
+!bitmap-halftone-skip-grid-template1.pdf
+!bitmap-halftone-skip-grid-template2.pdf
+!bitmap-halftone-skip-grid-template3.pdf
+!bitmap-halftone-skip-grid.pdf
+!bitmap-halftone-template1.pdf
+!bitmap-halftone-template2.pdf
+!bitmap-halftone-template3.pdf
+!bitmap-halftone.pdf
+!bitmap-initially-unknown-size.pdf
+!bitmap-mmr.pdf
+!bitmap-p32-eof.pdf
+!bitmap-randomaccess.pdf
+!bitmap-refine-customat-tpgron.pdf
+!bitmap-refine-customat.pdf
+!bitmap-refine-lossless.pdf
+!bitmap-refine-page-subrect.pdf
+!bitmap-refine-page.pdf
+!bitmap-refine-refine.pdf
+!bitmap-refine-template1-tpgron.pdf
+!bitmap-refine-template1.pdf
+!bitmap-refine-tpgron.pdf
+!bitmap-refine.pdf
+!bitmap-stripe-initially-unknown-height.pdf
+!bitmap-stripe-last-implicit.pdf
+!bitmap-stripe-single-no-end-of-stripe.pdf
+!bitmap-stripe-single.pdf
+!bitmap-stripe.pdf
+!bitmap-symbol-big-segmentid.pdf
+!bitmap-symbol-context-reuse.pdf
+!bitmap-symbol-empty.pdf
+!bitmap-symbol-negative-sbdsoffset.pdf
+!bitmap-symbol-refine.pdf
+!bitmap-symbol-symbolrefine-textrefine.pdf
+!bitmap-symbol-symbolrefineone-customat.pdf
+!bitmap-symbol-symbolrefineone-template1.pdf
+!bitmap-symbol-symbolrefineone.pdf
+!bitmap-symbol-symbolrefineseveral.pdf
+!bitmap-symbol-symhuff-texthuff.pdf
+!bitmap-symbol-symhuff-texthuffB10B13.pdf
+!bitmap-symbol-symhuffB5B3-texthuffB7B9B12.pdf
+!bitmap-symbol-symhuffcustom-texthuffcustom.pdf
+!bitmap-symbol-symhuffrefine-textrefine.pdf
+!bitmap-symbol-symhuffrefineone.pdf
+!bitmap-symbol-symhuffrefineseveral.pdf
+!bitmap-symbol-symhuffuncompressed-texthuff.pdf
+!bitmap-symbol-textbottomleft.pdf
+!bitmap-symbol-textbottomlefttranspose.pdf
+!bitmap-symbol-textbottomright.pdf
+!bitmap-symbol-textbottomrighttranspose.pdf
+!bitmap-symbol-textcomposite.pdf
+!bitmap-symbol-texthuffrefine.pdf
+!bitmap-symbol-texthuffrefineB15.pdf
+!bitmap-symbol-texthuffrefinecustom.pdf
+!bitmap-symbol-texthuffrefinecustomdims.pdf
+!bitmap-symbol-texthuffrefinecustompos.pdf
+!bitmap-symbol-texthuffrefinecustomposdims.pdf
+!bitmap-symbol-texthuffrefinecustomsize.pdf
+!bitmap-symbol-textrefine-customat.pdf
+!bitmap-symbol-textrefine-negative-delta-width.pdf
+!bitmap-symbol-textrefine.pdf
+!bitmap-symbol-texttopright.pdf
+!bitmap-symbol-texttoprighttranspose.pdf
+!bitmap-symbol-texttranspose.pdf
+!bitmap-symbol.pdf
+!bitmap-template1-customat-tpgdon.pdf
+!bitmap-template1-customat.pdf
+!bitmap-template1-tpgdon.pdf
+!bitmap-template1.pdf
+!bitmap-template2-customat-tpgdon.pdf
+!bitmap-template2-customat.pdf
+!bitmap-template2-tpgdon.pdf
+!bitmap-template2.pdf
+!bitmap-template3-customat-tpgdon.pdf
+!bitmap-template3-customat.pdf
+!bitmap-template3-tpgdon.pdf
+!bitmap-template3.pdf
+!bitmap-tpgdon.pdf
+!bitmap-trailing-7fff-stripped-harder-refine.pdf
+!bitmap-trailing-7fff-stripped-harder.pdf
+!bitmap-trailing-7fff-stripped.pdf
+!bitmap.pdf
