--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "url": "git://github.com/mozilla/pdf.js.git"
   },
   "engines": {
-    "node": ">=20.16.0 || >=22.3.0"
+    "node": ">=20.19.0 || >=22.13.0 || >=24"
   },
   "license": "Apache-2.0"
 }
